<resources>
    <string name="app_name">Real AI</string>
    <string name="enter_button">Enter</string>
    <string name="back_button">Back</string>
    <string name="ok_button">OK</string>
    <string name="erase_memory">Erase Memory</string>
    <string name="exit_app">Exit</string>
    <item name="activityRoot" type="id"/>
    <string name="thought_log">View Thinking</string>
    <string name="menu_button">Menu</string>
    <string name="word_fix">Correct Spelling</string>
    <string name="btn_accept">Accept</string>
    <string name="setdelay">Set Delay</string>
    <string name="tips">Tips</string>
    <string name="encourage">Encourage</string>
    <string name="discourage">Discourage</string>
    <string name="advanced_on">Advanced Mode: true</string>
    <string name="advanced_off">Advanced Mode: false</string>
    <string name="new_session">New Session</string>
    <string name="response_types">Set Response Types</string>
</resources>
